<resources>
    <string name="app_name">22B11</string>
    <string name="questionnaire_Button_Home">Questionnaire</string>


    <string name="tv_calm">calm</string>
    <string name="tv_uncomfortable">uncomfortable</string>
    <string name="tv_comfortable">comfortable</string>
    <string name="tv_relaxed">relaxed</string>
    <string name="tv_tense">tense</string>
    <string name="tv_energetic">energetic</string>
    <string name="tv_lacking_energy">lacking energy</string>
    <string name="tv_tired">tired</string>
    <string name="tv_awake">awake</string>
    <string name="tv_dissatisfied">dissatisfied</string>
    <string name="tv_satisfied_q1">satisfied</string>
    <string name="tv_restless_q1">restless</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="question_MDBF">In the last 24 hours, I felt on average…</string>
    <string name="questionnaire_welcome_text">Next we will ask you a few questions.\n This wont take long.</string>
    <string name="question_Event_Appraisal_no_event">no event</string>
    <string name="question_Event_Appraisal_very_intense">very intense</string>
    <string name="question_Event_Appraisal_item_22">Have you experienced one or more negative events since the last query?\n How intense was the most important negative event?</string>
    <string name="question_Event_Appraisal_item_23">Have you experienced one or more positive events since the last query?\n How intense was the most important positive event?</string>
    <string name="btn_Start">Start</string>
    <string name="question_Social_context_item_24">Are you alone now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_Social_context_item_25">When you think of the people you are surrounded, how does the following statement apply?\n I do not like these people!</string>
    <string name="not_at_all_true">not at all true</string>
    <string name="completely_true">completely true</string>
    <string-array name="social_situation_list">
        <item>select</item>
        <item>Life partner</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Work colleagues</item>
        <item>Strangers</item>
    </string-array>
    <string name="question_Social_situation_question">What kind of people are you surrounded by at the moment?</string>
    <string-array name="context_list">
        <item>select</item>
        <item>Home</item>
        <item>Work</item>
        <item>Sport</item>
        <item>other hobby</item>
        <item>shopping</item>
        <item>visit</item>
        <item>other</item>
    </string-array>
    <string name="question_context_question">Where are you right now?</string>
    <string name="question_selbstwert_question_1">At present I am satisfied with myself</string>
    <string name="question_selbstwert_question_2">At the moment I consider myself a failure</string>
    <string name="question_Impulsivitaet_1">Since the last query, I have acted impulsively, i.e., I have acted without thinking about possible consequences</string>
    <string name="question_Impulsivitaet_2">Since the last query, I have behaved in an angry or aggressive manner towards another person, which I felt sorry for afterwards</string>
    <string name="finish">Finish</string>
    <string name="recordActivity">Record activity</string>
    <string name="Stop">Stop</string>
    <string name="Reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="selected">Selected</string>
    <string name="selected_nothing">No activity selected</string>
    <string name="please_select_activity">Please select an activity</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="swimming">Swimming</string>
    <string name="hiking">Hiking</string>
    <string name="other">Other</string>
    <string name="yoga">Yoga</string>
    <string name="meditation">Meditation</string>
    <string name="addActivity">Add activity</string>
    <string name="editActivity">Edit activity</string>
    <string name="notNow">Not now</string>
    <string name="deletedSuccessful">Deleted successful</string>
    <string name="holdForDeletion">Hold to delete</string>
    <string name="doYouWantToAddSomeNotes">Add some notes ?</string>
    <string name="recentActivities">Recent activities</string>
    <string name="noActivitiesRecorded">There are no recorded Activities</string>
    <string name="selectTheme">Select a Theme</string>
    <string name="apply">Apply</string>
    <string name="type">Type</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="duration">Duration</string>
    <string name="selectDate">Select Date</string>
    <string name="yourCurrentLocation">Your current Location:</string>
    <string name="CurrentLocationNotAvailable">Location currently not available</string>
    <string name="AppRequiresPermission">This app requires permission to be granted in order to work properly</string>
    <string name="yourMoodScore">Your MoodScore is</string>
    <string name="invalidMoodScore">Questionnaire discarded because too little data was provided</string>
    <string name="thanksForTakingTheTime">Thank you for taking the time. \n If you wish, you can add some notes to your questionnaire</string>
    <string name="invalidDate">Invalid date</string>
    <string name="startBeforeEnd">The end date must be after the start date</string>
    <string name="selectAnActivity">Please select an activity</string>
    <string name="barChartActivities">Activities in min</string>
    <string name="NoBarData">No data could be found for this interval!</string>
    <string name="NoBarDataLastDays">No activities have been recorded in the last 7 days!</string>

    <string name="notificationText">It\'s time for your daily questionnaire!</string>

    <string-array name="activity_list">
        <item>@string/please_select_activity</item>
        <item>@string/running</item>
        <item>@string/walking</item>
        <item>@string/swimming</item>
        <item>@string/hiking</item>
        <item>@string/other</item>
    </string-array>
    <string name="needMoreQuestionnaires">You need to do %d more Daily Questionnaires to unlock this theme</string>
    <string name="startDate">Start Date</string>
    <string name="emptyInput">----/--/--</string>
    <string name="pleaseInputDateValues">Select the date interval, from which activities are to be plot</string>
    <string name="invalidDateCombinations">Invalid Date Combinations</string>
    <string name="dateCombinationsCannotBeNull">A Date Entry Cannot Be Empty</string>
    <string name="endDate">End Date</string>

    <string name="add">Add</string>
    <string name="detectedActivities">We have captured some activities.\n Should they be added?</string>
    <string name="autoGenerated">Automatically detected</string>
    <string name="barChartMood">Moodscore</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_userid">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="or">or</string>
    <string name="action_sign_up">Create a new account</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_userid">Not a valid user ID</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_credentials">"Invalid user ID or password"</string>
    <string name="http_connection_failed">"Connection to the server failed"</string>
    <string name="http_request_failed">"HTTP request failed"</string>
    <string name="http_response_malformed">"HTTP response malformed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="account_created_text">A new account has been automatically created for you!\n\nPlease save the following information in a safe place.</string>
    <string name="remember_login">Remember login and password</string>
    <string name="credentials_saved">User credentials saved</string>
    <string name="credentials_not_saved">User credentials could not be saved</string>
    <string name="logout">Log out</string>
    <string name="database_transaction_failed">Database transaction failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_logout">Are you sure you want to log out?</string>
    <string name="signed_in_user_info">Signed in with user ID: %d</string>
    <string name="last_sync_info">Last sync: %s</string>
    <string name="questionnaireNotificationTime">Questionnaire Reminder Time</string>
    <string name="setTheme">Choose Theme</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="foreground_service">Foreground service</string>
    <string name="enableGPS">Enable GPS</string>
</resources>
