<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuestionnaireWelcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seekBar9"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <SeekBar
                android:id="@+id/seekBar10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <SeekBar
                android:id="@+id/seekBar11"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView13"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <SeekBar
                android:id="@+id/seekBar12"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <SeekBar
                android:id="@+id/seekBar8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/question_MDBF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="44dp"
                android:text="@string/tv_dissatisfied"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_restless_q1"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_uncomfortable"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_tense"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_lacking_energy"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_tired"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:text="@string/tv_satisfied_q1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_calm"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_comfortable"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_relaxed"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_energetic"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_awake"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <SeekBar
                android:id="@+id/seekBar7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/purple_500"
                android:splitTrack="false"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:onClick="onBtnBackClick_question_MDBF_Fragment"
                android:text="@string/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button16"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnNextClick_question_MDBF_Fragment"
                android:text="@string/btn_next"
                app:layout_constraintBottom_toBottomOf="@+id/button15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button15" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>
